Server/force-app/main/default/objects/Sensor_Event__c/fields/Modulus_Difference_Vectors__c.field-meta.xml
<CustomField>
    <fullName>Modulus_Difference_Vectors__c</fullName>
    <formula>sqrt(X__c*X__c + Y__c*Y__c + Z__c*Z__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modulus Difference Vectors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>