Server/force-app/main/default/objects/Sensor_Event__c/fields/Previous_Event__c.field-meta.xml
<CustomField>
    <fullName>Previous_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Event</label>
    <referenceTo>Sensor_Event__c</referenceTo>
    <relationshipLabel>Previous Events</relationshipLabel>
    <relationshipName>Previous_Events</relationshipName>
    <type>Lookup</type>
</CustomField>